@@ -57,8 +57,6 @@ namespace IceChat
             try
             {
                 Exception ex = (Exception)e.ExceptionObject;
-                
-                //System.Diagnostics.Debug.WriteLine(System.IO.Path.GetDirectoryName(System.Reflection.Assembly.GetExecutingAssembly().Location) + System.IO.Path.DirectorySeparatorChar + "exception.log");
                 System.IO.StreamWriter io = new System.IO.StreamWriter(FormMain.Instance.CurrentFolder + System.IO.Path.DirectorySeparatorChar + "Logs" + System.IO.Path.DirectorySeparatorChar + "exception.log", true);
                 io.WriteLine(DateTime.Now.ToString() + "-" + ex.Message + ":" + ex.StackTrace);
                 io.WriteLine();
