@@ -42,6 +42,10 @@
 *Fix issue with closing a window, Server Tree does not show proper window highlighted (RC2.3)
 *Add in the $+ identifier, used for joining to other words/identifiers (RC2.3)
 
+* Fix issue with Debug window not showing in the Server Tree (RC2.4)
+* Add popup menu for Channel List in the Server Tree (RC2.4)
+* Fix issue with ChannelKick event in Plugins, Host now passes self nick (RC2.4)
+
 
 Try and remove bold/italic from font selection dialog
 Add options for how many times to flash taskbar/system tray icons
